Update styles for hero and features sections

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,23 @@
       </section>
 
       <section class="features">
-        <div class="container"></div>
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="features__list grid grid--4">
+            <li class="features__item features__item_one">
+              <p>Пушистые и ароматные ёлочки</p>
+            </li>
+            <li class="features__item features__item_two">
+              <p>Набор ёлочных украшений в подарок</p>
+            </li>
+            <li class="features__item features__item_three">
+              <p>Ёлочки сохранят свежесть надолго</p>
+            </li>
+            <li class="features__item features__item_four">
+              <p>Доставим ёлочку за наш счет</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="tree-Products">
