Update styles for buttons, typography, and colors. Add a transparent button variation. Add tree and tree-card blocks.

--- a/src/index.html
+++ b/src/index.html
@@ -125,8 +125,134 @@
         </div>
       </section>
 
-      <section class="tree-Products">
-        <div class="container"></div>
+      <section class="tree-products">
+        <h2 class="visually-hidden">Наши новогодние деревья</h2>
+        <ul class="tree__list">
+          <li class="tree__item">
+            <div class="container">
+              <article class="tree-card">
+                <div class="tree-card__info">
+                  <h2 class="tree-card__title">Пихта Фразера</h2>
+                  <div class="tree-card__features">
+                    <p>
+                      Пихта Фразера чаще использовалась в качестве
+                      рождественской ёлки Белого дома
+                    </p>
+                  </div>
+                  <div class="tree-card__description">
+                    <p>
+                      Мягкий аромат, форма, и способность сохранять мягкие
+                      иголки в течение длительного времени, делают её одним из
+                      лучших деревьев для рождества
+                    </p>
+                  </div>
+                  <div class="tree-card__button-wrapper">
+                    <button class="tree-card__button button" href="/">
+                      Заказать
+                    </button>
+                    <a
+                      class="tree-card__button tree-card__link button button-transparent"
+                      href="/"
+                    >
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
+                <img
+                  src="./img/products/faser-fir.jpg"
+                  alt="Пихта Фразера"
+                  class="tree-card__img"
+                  width="630"
+                  height="590"
+                  loading="lazy"
+                />
+              </article>
+            </div>
+          </li>
+          <li class="tree__item">
+            <div class="container">
+              <article class="tree-card tree-card_odd">
+                <div class="tree-card__info">
+                  <h2 class="tree-card__title">Русская ель</h2>
+                  <div class="tree-card__features">
+                    <p>
+                      Русская ель — наиболее традиционная разновидность
+                      рождественских деревьев, которую можно встретить в
+                      большинстве советских фильмов про новый год
+                    </p>
+                  </div>
+                  <div class="tree-card__description">
+                    <p>
+                      Отличительной особенностью русской ёлки являются
+                      выраженный хвойный запах, короткие колючие иголки и
+                      сравнительно менее пышная крона
+                    </p>
+                  </div>
+                  <div class="tree-card__button-wrapper">
+                    <button class="tree-card__button button" href="/">
+                      Заказать
+                    </button>
+                    <a
+                      class="tree-card__button tree-card__link button button-transparent"
+                      href="/"
+                    >
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
+                <img
+                  src="./img/products/russian-spruce.jpg"
+                  alt="Русская ель"
+                  class="tree-card__img"
+                  width="630"
+                  height="590"
+                  loading="lazy"
+                />
+              </article>
+            </div>
+          </li>
+          <li class="tree__item">
+            <div class="container">
+              <article class="tree-card">
+                <div class="tree-card__info">
+                  <h2 class="tree-card__title">Сибирская пихта</h2>
+                  <div class="tree-card__features">
+                    <p>
+                      Пихта сибирская является одной из самых красивых и
+                      ароматных хвойных пород и ее часто можно встретить в
+                      парках и садах
+                    </p>
+                  </div>
+                  <div class="tree-card__description">
+                    <p>
+                      Хвоя Сибирской пихты в отличии от еловой крупнее, зеленее,
+                      совершенно не колючая и мягкая как трава
+                    </p>
+                  </div>
+                  <div class="tree-card__button-wrapper">
+                    <button class="tree-card__button button" href="/">
+                      Заказать
+                    </button>
+                    <a
+                      class="tree-card__button tree-card__link button button-transparent"
+                      href="/"
+                    >
+                      Подробнее
+                    </a>
+                  </div>
+                </div>
+                <img
+                  src="./img/products/faser-fir.jpg"
+                  alt="Сибирская пихта"
+                  class="tree-card__img"
+                  width="630"
+                  height="590"
+                  loading="lazy"
+                />
+              </article>
+            </div>
+          </li>
+        </ul>
       </section>
 
       <section class="pay">
