Update payment section layout and add new payment options.

--- a/src/index.html
+++ b/src/index.html
@@ -256,7 +256,73 @@
       </section>
 
       <section class="pay">
-        <div class="container"></div>
+        <div class="container">
+          <h2 class="pay__title">Как можно оплатить</h2>
+          <ul class="pay__list grid grid--3">
+            <li class="pay__item">
+              <article class="pay__option_pay option-pay">
+                <div class="option-pay__picture-wrapper">
+                  <img
+                    src="./img/icon/cards.svg"
+                    alt="Платежная система"
+                    class="option-pay__picture"
+                    width="209"
+                    height="28"
+                    loading="lazy"
+                  />
+                </div>
+                <h3 class="option-pay__title">Банковской картой</h3>
+                <div class="option-pay__description">
+                  <p>Visa/Mastercard или PayPal из любой страны
+                </div>
+              </article>
+            </li>
+            <li class="pay__item">
+              <article class="pay__option_pay option-pay">
+                <div class="option-pay__picture-wrapper">
+                  <img
+                    src="./img/logo.png"
+                    alt="Беспроцентная рассрочка от компании Christmas Trees"
+                    class="option-pay__picture"
+                    width="164"
+                    height="76"
+                    loading="lazy"
+                  />
+                </div>
+                <h3 class="option-pay__title">
+                  Беспроцентная рассрочка от нас
+                </h3>
+                <div class="option-pay__description">
+                  <p>
+                    Мы делим платеж на 2 части. Первую часть вы оплачиваете
+                    сразу, вторую через 15 дней после получения дерева
+                  </p>
+                </div>
+              </article>
+            </li>
+            <li class="pay__item">
+              <article class="pay__option_pay option-pay">
+                <div class="option-pay__picture-wrapper">
+                  <img
+                    src="./img/icon/tinkoff.svg"
+                    alt="Беспроцентная рассрочка 
+                    от Тинькофф"
+                    class="option-pay__picture"
+                    width="174"
+                    height="46"
+                    loading="lazy"
+                  />
+                </div>
+                <h3 class="option-pay__title">
+                  Беспроцентная рассрочка от Тинькофф
+                </h3>
+                <div class="option-pay__description">
+                  <p>Рассрочка на 3 месяца без первоначального платежа</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
